# readaloud

./: README.md  install.sh  pyproject.toml  readaloud  readaloud.py
readaloud-repo/: .gitignore  LICENSE  README.md  install.sh  readaloud
